# MyYahooEmails

./: .env.example  .gitignore  CLAUDE.md  Prompt_contradiction.rtf  claude-coding-prompts-2026.md  cli.py  config.yaml.example  pyproject.toml
.claude/: hookify.cleanup-test-data.local.md  launch.json
docs/: B2B.md  PLAN.md  architecture.md  branding.md  decision-log.md  evidence-feature.md  findings.md  groqapi.md  launch-plan.md  session-handoff-2026-04-20.md  session-handoff-2026-04-20b.md  session-handoff-2026-04-22.md  session-handoff-2026-04-22b.md  session-handoff.md  telemetry-spec.md
src/: config.py  telemetry.py
src/analysis/: classifier.py  contradictions.py  court_correlator.py  excel_export.py  excel_import.py  manipulation.py  memory_synthesizer.py  reply_generator.py  runner.py  timeline.py  tone.py
src/analysis/prompts/: classify.txt  contradictions.txt  contradictions_confirm.txt  court_correlation.txt  extract_actions.txt  tone.txt  (+4 more)
src/extraction/: imap_client.py  parser.py  threader.py
src/llm/: base.py  claude_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  router.py
src/reports/: builder.py  charts.py  docx_renderer.py  pdf_renderer.py
src/statistics/: aggregator.py
src/storage/: database.py  models.py  search.py
src/web/: app.py  bundle.py  deps.py  job_manager.py  settings_store.py
tests/: test_parser.py
tools/: chatgpt_prompt_contradictions.md  chatgpt_prompt_contradictions.txt  chatgpt_prompt_enfants.txt  chatgpt_prompt_timeline.txt  extract_ruling_fields.py  groq_rate_check.py  legal_direct_analyze.py
(+89 files in other folders)
